--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,21 +8,22 @@
 body {
   margin: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
   background: #191a24;
   display: grid;
   align-items: end;
+  overflow-x: hidden;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 100vh;
   justify-content: center;
   align-items: center;
   margin: auto;
+  height: 100%;
+    min-height: 100vh;
+
   background: linear-gradient(to bottom, #1f1f29 0%, #231d2b 40%);
 }
 h1 {
@@ -190,10 +191,11 @@ h1 {
   position: absolute;
   display: flex;
   align-items: center;
-  bottom: 0px;
-  top: 0px;
+  bottom: 0;
+  top: 160px;
   right: 0px;
   left: 0px;
+  height: fit-content;
   justify-content: center;
   gap: 2rem;
 }
@@ -207,12 +209,7 @@ h1 {
   cursor: pointer;
 }
 /* Media Query */
-@media screen and (max-width: 768px) {
-  .iconList{
-    top: -50px;
-    bottom:50px;
-  }
-}
+
 @media screen and (max-width: 768px) {
   .flip {
     width: calc(4 * 75px+80px);
