--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@ h1 {
   perspective-origin: 50% 50%;
   perspective: 18.75rem;          /* 300px */
   background-color: #34364f;
-  border-radius: 0.375rem;        /* 6px */
+  border-radius: 0.5rem;        /* 6px */
   box-shadow: 0 0.625rem 0.625rem -0.625rem #191a24;
 }
 
@@ -122,8 +122,8 @@ h1 {
 .upperCard {
   align-items: flex-end;
   background-color: #2c2c44;
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .upperCard span {
@@ -132,8 +132,8 @@ h1 {
 
 .lowerCard {
   align-items: flex-start;
-  border-bottom-left-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 
 .lowerCard span {
@@ -167,8 +167,8 @@ h1 {
   transform-origin: 50% 0%;
   transform: rotateX(180deg);
   background-color: #34364f;
-  border-bottom-left-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
   animation: unfold 0.6s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
   transform-style: preserve-3d;
 }
@@ -183,8 +183,8 @@ h1 {
   transform-origin: 50% 100%;
   transform: rotateX(0deg);
   background-color: #34364f;
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
   animation: fold 0.6s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
   transform-style: preserve-3d;
 }
@@ -192,7 +192,18 @@ h1 {
 .flipCardItem.fold span {
   transform: translateY(50%);
 }
-
+.animatedCardContainer{
+  display: flex;
+  flex-direction: column;
+}
+.cardBackground{
+  height: 0.75rem;
+  z-index: -10;
+  margin-top: -0.25rem;
+  border-bottom-left-radius: 0.875rem;
+  border-bottom-right-radius: 0.875rem;
+  background-color: #1a1a24;
+}
 .rightDot,
 .leftDot {
   height: 0.5rem;                 /* 8px */
